[package]
name = "inert"
version = "0.2.2" # update `documentation` link on bump
authors = ["Anthony Ramine <n.oxyde@gmail.com>"]
edition = "2018"
description = "Inert lets you use non-Sync values in a Sync way"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nox/inert"
documentation = "https://docs.rs/inert/0.2.2/"
categories = ["concurrency", "data-structures"]
keywords = ["sync", "thread"]

[features]
std = []

[lib]
test = false

[dependencies]
inert_derive = {version = "0.1.0", path = "derive"}

[workspace]
members = [
    "derive",
]

[[test]]
name = "refcells"
required-features = ["std"]
